@@ -28,11 +28,7 @@ public class RobotService {
     private final StoreRepository storeRepository;
     private final ObjectMapper mapper = new ObjectMapper();
 
-    /**
-     * 특정 매장의 로봇을 Pudu API에서 조회하여 DB에 저장/업데이트
-     * @param req 매장 ID 포함 요청 정보
-     * @return 저장된 로봇 개수
-     */
+    // 특정 매장의 로봇 동기화
     @Transactional
     public int syncRobots(RobotSyncRequestDTO req) {
 
@@ -42,19 +38,23 @@ public class RobotService {
 
         List<RobotDTO> robots = getRobotListByShop(shopId);
 
-        int cnt = 0;
+        int newCount = 0;
+
         for (RobotDTO dto : robots) {
+            Robot existing = robotRepository.findBySn(dto.getSn()).orElse(null);
+            boolean isNew = (existing == null);
             saveRobot(dto, store);
-            cnt++;
+            if (isNew) {
+                newCount++;
+            }
+
+
+
         }
-        return cnt;
+        return newCount;
     }
 
-    /**
-     * DB에 저장된 모든 매장의 로봇을 Pudu API에서 조회하여 동기화
-     * 관리자가 전체 매장의 로봇 정보를 한 번에 업데이트할 때 사용
-     * @return 저장된 전체 로봇 개수
-     */
+    // 모든 매장의 로봇 동기화
     @Transactional
     public int syncAllStoresRobots() {
 
@@ -63,7 +63,7 @@ public class RobotService {
         System.out.println("\n===== Sync All Stores Robots =====");
         System.out.println("Total Stores: " + stores.size());
 
-        int totalCount = 0;
+        int newTotal = 0;
 
         for (Store store : stores) {
             System.out.println("\n--- Processing Store: " + store.getStoreId() + " ---");
@@ -72,7 +72,7 @@ public class RobotService {
                 int count = syncRobots(RobotSyncRequestDTO.builder()
                         .storeId(store.getStoreId())
                         .build());
-                totalCount += count;
+                newTotal += count;
                 System.out.println("Store " + store.getStoreId() + " Synced: " + count + " robots");
             } catch (Exception e) {
                 System.out.println("Error syncing store " + store.getStoreId() + ": " + e.getMessage());
@@ -81,56 +81,27 @@ public class RobotService {
         }
 
         System.out.println("\n===== All Stores Robot Sync Complete =====");
-        System.out.println("Total Synced: " + totalCount);
+        System.out.println("Total New Robots: " + newTotal);
         System.out.println("==========================================\n");
 
-        return totalCount;
+        return newTotal;
     }
 
-    /**
-     * DB에서 특정 매장의 로봇 목록을 조회
-     * @param storeId 매장 ID
-     * @return 해당 매장에 속한 로봇 목록
-     */
+
+    // 매장별 로봇 목록 조회
     public List<RobotDTO> getRobotListFromDB(Long storeId) {
-        return robotRepository.findAllByStore_StoreId(storeId)
-                .stream()
-                .map(this::convertToDto)
-                .collect(Collectors.toList());
+
+        if (storeId != null) {
+            List<Robot> robotList = robotRepository.findAllByStore_StoreId(storeId);
+
+            return robotList.stream().map(this::convertToDto).toList();
+        }else {
+            return robotRepository.findAll().stream().map(this::convertToDto).toList();
+        }
     }
 
-    /**
-     * DB의 로봇 정보와 API의 최신 상태 정보를 병합하여 조회
-     * @param sn 로봇 시리얼 번호
-     * @param storeId 매장 ID
-     * @return 병합된 로봇 정보
-     */
-    public RobotDTO getRobotInfoByStoreId(String sn, Long storeId) {
-        Store store = storeRepository.findById(storeId)
-                .orElseThrow(() -> new IllegalArgumentException("Store not found"));
 
-        Long shopId = store.getShopId();
-
-        RobotDTO api = getRobotInfo(sn, shopId);
-        Robot robot = robotRepository.findBySn(sn).orElse(null);
-        if (robot == null) return api;
-        RobotDTO dto = convertToDto(robot);
-
-        dto.setBattery(api.getBattery());
-        dto.setOnline(api.getOnline());
-        dto.setStatus(api.getStatus());
-        dto.setProductCode(api.getProductCode());
-        dto.setSoftVersion(api.getSoftVersion());
-
-        return dto;
-    }
-
-    /**
-     * 로봇 정보를 DB에 저장 또는 업데이트
-     * @param dto 저장할 로봇 정보
-     * @param store 로봇이 속한 매장
-     * @return 저장된 로봇 엔티티
-     */
+    // 로봇 정보 저장/업데이트
     @Transactional
     public Robot saveRobot(RobotDTO dto, Store store) {
         Robot robot = robotRepository.findBySn(dto.getSn())
@@ -150,12 +121,7 @@ public class RobotService {
         return robotRepository.save(robot);
     }
 
-    /**
-     * Pudu API에서 로봇의 모든 정보를 조회하여 DTO로 변환
-     * @param sn 로봇 시리얼 번호
-     * @param shopId 샵 ID
-     * @return 조회된 로봇 정보
-     */
+
     public RobotDTO getRobotInfo(String sn, Long shopId) {
         String mac = null;
         String nickname = null;
@@ -194,11 +160,7 @@ public class RobotService {
                 .build();
     }
 
-    /**
-     * 샵에 속한 모든 로봇 목록을 Pudu API에서 조회
-     * @param shopId 샵 ID
-     * @return 로봇 정보 리스트
-     */
+
     public List<RobotDTO> getRobotListByShop(Long shopId) {
         List<JsonNode> list = fetchRobotListAll(shopId);
         List<RobotDTO> result = new ArrayList<>();
@@ -211,11 +173,7 @@ public class RobotService {
         return result;
     }
 
-    /**
-     * Pudu API에서 샵의 모든 로봇 목록 조회 (기본 정보)
-     * @param shopId 샵 ID
-     * @return 로봇 JSON 노드 리스트
-     */
+
     private List<JsonNode> fetchRobotListAll(Long shopId) {
         List<JsonNode> list = new ArrayList<>();
 
@@ -238,12 +196,7 @@ public class RobotService {
         return list;
     }
 
-    /**
-     * Pudu API에서 시리얼 번호로 특정 로봇 조회
-     * @param sn 로봇 시리얼 번호
-     * @param shopId 샵 ID
-     * @return 로봇 JSON 노드
-     */
+
     private JsonNode fetchRobotBySn(String sn, Long shopId) {
 
         try {
@@ -267,11 +220,7 @@ public class RobotService {
         return null;
     }
 
-    /**
-     * Pudu API에서 로봇의 상세 정보 조회 (별칭, 배터리, 온라인 상태 등)
-     * @param sn 로봇 시리얼 번호
-     * @return 로봇 상세 정보 JSON 노드
-     */
+
     private JsonNode fetchRobotDetail(String sn) {
 
         try {
@@ -289,12 +238,8 @@ public class RobotService {
         return null;
     }
 
-    /**
-     * Pudu API에서 로봇의 최신 충전 로그 조회 (제품 코드, 소프트웨어 버전 등)
-     * @param sn 로봇 시리얼 번호
-     * @param shopId 샵 ID
-     * @return 최신 충전 로그 JSON 노드
-     */
+
+
     private JsonNode fetchLatestChargeLog(String sn, Long shopId) {
         long end = System.currentTimeMillis() / 1000;
         long start = end - 60L * 60 * 24 * 90;
@@ -320,22 +265,14 @@ public class RobotService {
         return null;
     }
 
-    /**
-     * DB에서 시리얼 번호로 로봇 조회
-     * @param sn 로봇 시리얼 번호
-     * @return 로봇 정보 DTO
-     */
+    // 시리얼 번호로 로봇 조회
     public RobotDTO getRobotBySn(String sn) {
         return robotRepository.findBySn(sn)
                 .map(this::convertToDto)
                 .orElseThrow(() -> new IllegalArgumentException("Robot not found"));
     }
 
-    /**
-     * 로봇 엔티티를 DTO로 변환
-     * @param robot 로봇 엔티티
-     * @return 변환된 로봇 DTO
-     */
+
     private RobotDTO convertToDto(Robot robot) {
         return RobotDTO.builder()
                 .robotId(robot.getRobotId())
